Partial_14Dec2021/force-app/main/default/objects/Visit_Promotion_type__c/Visit_Promotion_type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To Store the Visit/Promotion Type for the Verticals.</description>
    <label>Visit/Promotion Type</label>
</CustomObject>