Partial_14Dec2021/force-app/main/default/objects/Visit_Promotion_type__c/fields/Actuals_API__c.field-meta.xml
<CustomField>
    <fullName>Actuals_API__c</fullName>
    <label>Actuals API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>