Partial_14Dec2021/force-app/main/default/objects/Visit_Promotion_type__c/fields/KRA_Name__c.field-meta.xml
<CustomField>
    <fullName>KRA_Name__c</fullName>
    <label>KRA Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>