Partial_14Dec2021/force-app/main/default/objects/Visit_Promotion_type__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Activity Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>