Partial_14Dec2021/force-app/main/default/objects/Visit_Promotion_type__c/fields/Retailing_Activities__c.field-meta.xml
<CustomField>
    <fullName>Retailing_Activities__c</fullName>
    <label>Retailing Activities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>