Partial_14Dec2021/force-app/main/default/objects/Visit_Promotion_type__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <length>125</length>
    <type>Text</type>
</CustomField>